[package]
name = "funda-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.4"
fake_user_agent = "0.1.4"
mime = "0.3.17"
reqwest = {version = "0.11.18", features = ["blocking"]}
scraper = "0.16.0"
tokio = {version = "1.28.2", features = ["full"]}
